chore: use SequenceCollection methods