@@ -93,7 +93,7 @@ abstract class LyricEditorTestSupport extends UnitTest {
             .as("expected exactly one SongDidChangeNotification, got: %s", didChanges)
             .hasSize(1);
 
-        return didChanges.get(0);
+        return didChanges.getFirst();
     }
 
     protected void verifyNoSongDidChange() {
